# myriad

./: .codacy.yml  .env.example  .fastconventional.yaml  .gitignore  .gitmodules  .sourcery.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  GEOIP.md  Gemfile  LICENSE  PROMPT.md  README.md  WORKTREE.md  _package.json  _pyproject.toml  app.py  biome.json  cloudflare-env.d.ts  go.mod  go.sum  index.html  main.go  main.py  mise.toml  models.py  monitoring-results.json  next.config.ts  open-next.config.ts  package.json  picard_remove_imperfect_albums.py  pyproject.toml  start.py  tsconfig.json  types.go  wrangler.jsonc
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: claude-code-review.yaml  claude-code-review.yml  claude.yaml  claude.yml  container-beta.yaml  container.yaml  dave-io-test-suite.yaml  devskim.yaml
.serena/: project.yml
.serena/memories/: blog-ai-water-use-expanded-plan.md
.trunk/: trunk.yaml
.trunk/configs/: biome.json  ruff.toml
app/: globals.css  layout.tsx  page.tsx  synthwave.css
code/cli/dave-io-test-suite/: Dockerfile  monitor.py  monitor.ts  pyproject.toml  run.py
code/cli/dimensions/python/: main.py  pyproject.toml
code/cli/dimensions/python/src/dimensions/: __main__.py  processor.py
components/: Dockerfile  allow-flows-from-netflow2ng.patch  dashboard.tsx  device-breakdown.tsx  digital-rain.tsx  domain-analysis.tsx  epic-transition.tsx  epic-view.tsx  filter-sidebar.tsx  high-level-view.tsx  instructions.tsx  key-check-form.tsx  key-compromise-checker.tsx  keyboard-listener.tsx  ntopng.bash  ntopng.conf  particle-system.tsx  redis.conf  relationship-view.tsx  social-links.tsx  stats-overview.tsx  suspicious-domains.tsx  synthwave-background.tsx  theme-provider.tsx  theme-toggle.tsx  ticket-detail.tsx  ticket-explorer.tsx  ticket-list.tsx  time-series-chart.tsx  upload.tsx
components/icons/: bluesky-icon.tsx
components/ui/: breadcrumb.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  command.tsx  context-menu.tsx  dropdown-menu.tsx  hover-card.tsx  input-otp.tsx  menubar.tsx  navigation-menu.tsx  progress.tsx  select.tsx  sidebar.tsx  steps.tsx  tabs.tsx  toast.tsx
configuration/biome/: biome.json
configuration/claude/: CLAUDE.md
configuration/copilot/: copilot-instructions-nuxt.md
configuration/dotfiles/: .codacy.yml  .env.example  .gitignore  .sourcery.yaml
configuration/github/: dependabot.yml  protect-main.json
configuration/github-actions/: trunk.yaml
configuration/goose/: goosehints.md
configuration/mastodon/: docker-compose.yml  mprocs.yaml  zshrc
configuration/mcp/: config.json
configuration/mikrotik/: CLAUDE.md  PBR.md  README.md
configuration/mise/: mise-typescript.toml
configuration/mprocs/: mprocs.yaml
configuration/postgres/: docker-compose.yml  postgres.env.example
configuration/trunk/: trunk-js-ts.yaml  trunk-python.yaml
configuration/typescript/: tsconfig-standard.json  tsconfig.json
demos/daisyui/: index.html
docs/: BUMP.md  LSR.md  PENDANT-LEARNING-PATHWAY.md
hooks/: use-analytics.ts
pendant/: .gitignore  PROGRESS-CHECKLIST.md  PROJECT-OVERVIEW.md  QUICK-START.md  README.md  platformio.ini
proxmark3-install-script/: pm3-setup.sh
public/: dns-analysis.py  manifest.json
run/: start.sh
scripts/: resample.py
scripts/movie-dedup/: .gitignore  AGENTS.md  README.md  pyproject.toml  run.sh
scripts/movie-dedup/src/movie_dedup/: __init__.py  app.py  config.py  copies.py  deleter.py  probe.py  scanner.py  selection.py  state.py
scripts/movie-dedup/src/movie_dedup/static/: styles.css
scripts/movie-dedup/src/movie_dedup/templates/: _progress.html  base.html  done.html  index.html  preview.html  results.html
scripts/movie-dedup/tests/: test_copies.py  test_deleter.py  test_probe.py  test_selection.py
src/: app.js  ask-clipboard-image.tsx  ask-selected-image.tsx  ask.tsx  conversation.tsx  create-ai-command.tsx  history.tsx  index.html  model.tsx  not_found.html  robots.txt  saved.tsx  search-ai-command.tsx  style.css  summarize.tsx  type.ts
styles/: globals.css
templates/: history.html  index.html  layout.html  view_scan.html
tests/: __init__.py  test_unsubscribe.py
utils/: file_scanner.py  script_generator.py
writing/: Prompt Injection Video Script.md  README.md
(+551 files in other folders)
