[project]
name = "subscriptions"
version = "0.1.0"
description = "List and remove YouTube subscriptions"
readme = "README.md"
authors = [{ name = "Dave Williams", email = "dave@dave.io" }]
requires-python = ">=3.13"
dependencies = [
  "click>=8.0.0",
  "google-api-python-client>=2.0.0",
  "google-auth-oauthlib>=1.0.0",
  "google-auth-httplib2>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
subscriptions = "subscriptions.cli:subscriptions"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
