[project]
name = "movie-dedup"
version = "0.1.0"
description = "Local web tool for finding and removing duplicate movie copies in a Kodi/Plex-style library."
readme = "README.md"
authors = [{ name = "Dave Williams", email = "dave@dave.io" }]
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136.0",
  "jinja2>=3.1.6",
  "pydantic>=2.13.3",
  "python-multipart>=0.0.26",
  "uvicorn[standard]>=0.44.0",
]

[project.scripts]
movie-dedup = "movie_dedup:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-asyncio>=1.3.0"]
