[project]
name = "dimensions"
version = "0.1.0"
description = "Manage images based on their dimensions"
readme = "README.md"
authors = [{ name = "Dave Williams", email = "dave@dave.io" }]
requires-python = ">=3.13"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Utilities",
]

dependencies = [
  "click>=8.2.1",
  "orjson>=3.10.18",
  "pathlib>=1.0.1",
  "pillow>=11.3.0",
  "pillow-heif>=1.0.0",
  "pyyaml>=6.0.2",
  "rawpy>=0.25.0",
  "rich>=14.0.0",
  "structlog>=25.4.0",
  "tqdm>=4.67.1",
  "typing>=3.10.0.0",
]

[dependency-groups]
dev = ["pytest>=8.4.1", "pytest-cov>=6.2.1", "types-pyyaml>=6.0.12.20250516"]

[project.urls]
Homepage = "https://github.com/dave/myriad"
Documentation = "https://github.com/dave/myriad"
Repository = "https://github.com/dave/myriad"
Issues = "https://github.com/dave/myriad/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
dimensions = "dimensions.cli:main"
